--- a/subtitles.yml
+++ b/subtitles.yml
@@ -1,9 +1,8 @@
 tasks:
-  subtitles:
-    find:
+  subtitles-tv:
+    filesystem:
       path:
         - /media/public/TV
-        - /media/public/Movies
       regexp: '.*\.(avi|mkv|mp4)$'
       recursive: yes
     regexp:
@@ -19,8 +18,21 @@ tasks:
       exact_match: yes
     priority: 3
 
-schedules:
-  - tasks:
-      - subtitles
-    interval:
-      days: 1
+  subtitles-movies:
+    filesystem:
+      path:
+        - /media/public/Movies
+      regexp: '.*\.(avi|mkv|mp4)$'
+      recursive: yes
+    regexp:
+      reject:
+        - \bsample\b: {from: title}
+    accept_all: yes
+    no_entries_ok: yes
+    seen: local
+    disable: [retry_failed]
+    subliminal:
+      languages:
+        - eng
+      exact_match: yes
+    priority: 3
